fixed image gaps

--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@ dd {
   margin: 0;
   border: 0;
   z-index: -1;
+  vertical-align: middle;
 }
 
 .header {
@@ -55,9 +56,13 @@ dd {
   height: auto;
 }
 
+.PrideMonthisAllYearMyDudes {
+  color: #00000092;
+}
+
 .AboutMe h1 {
   margin: 0;
-  margin-left: 25%;
+  margin-left: 30%;
 }
 
 .Experience {
@@ -69,11 +74,12 @@ dd {
 
 .Experience h1 {
   margin: 0;
-  margin-left: 25%;
+  margin-left: 30%;
 }
 
 .Experience h2 {
-  margin-left: 25%;
+  margin-left: 30%;
+  margin-top: 0;
 }
 
 .Volunteerism {
@@ -93,7 +99,7 @@ dd {
 
 
 .icon-links {
-  margin-left: 25%;
+  margin-left: 30%;
 }
 
 .social-link {
@@ -106,11 +112,8 @@ dd {
 }
 
 .page-container {
-  /* display: flex;
-  flex-direction: column; */
   background: white;
   margin-top: 12vh;
-  /* margin-left: 20%; */
   background-color: var(--corn);
 }
 
@@ -183,23 +186,21 @@ a {
   flex-direction: column;
   width: 100%;
   height: 20vh;
-  margin: 0;
+  margin-left: 25%;
 } 
 
 #greeting .blurb {
-  font-size: 2em;
+  font-size: 1.75em;
   margin-bottom: 0;
   line-height: 2em;
   margin: 0;
-  width: 100%;
-  margin-left: 20%;
+  margin-right: 40%;
 }
 
 #greeting .hi-there {
   font-size: 4em;
   width: 100%;
   padding-top: 5%;
-  margin-left: 20%;
 }
 
 #greeting p {
@@ -220,6 +221,7 @@ a {
   display: flex;
   flex-direction: column;
   margin-left: 20%;
+  margin-right: 20%;
 }
 
 .job-block {
